WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169940
AX: WebKit is returning the wrong rangeForLine
https://bugs.webkit.org/show_bug.cgi?id=169940
Summary
AX: WebKit is returning the wrong rangeForLine
Nan Wang
Reported
2017-03-21 18:34:21 PDT
In content editable with multiple lines, webkit is giving a wrong range for line and omitting the first character of that line. <
rdar://problem/30942088
>
Attachments
patch
(5.94 KB, patch)
2017-03-21 18:44 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
patch
(6.97 KB, patch)
2017-03-22 12:29 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2017-03-21 18:44:29 PDT
Created
attachment 305061
[details]
patch
chris fleizach
Comment 2
2017-03-22 10:35:14 PDT
Comment on
attachment 305061
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=305061&action=review
> LayoutTests/accessibility/mac/range-for-contenteditable-newline.html:54 > + var rangeForLine = textControl3.rangeForLine(1);
do we need to worry about lineForRange as well? we should probably add some test just to be sure
chris fleizach
Comment 3
2017-03-22 10:37:08 PDT
Comment on
attachment 305061
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=305061&action=review
> LayoutTests/accessibility/mac/range-for-contenteditable-newline.html:17 > +<p>jumped over the lazy dog</p>
if we put a <pre> inside of a content editable and then just used regular newlines, do we have any other issues
Nan Wang
Comment 4
2017-03-22 12:29:43 PDT
Created
attachment 305114
[details]
patch updated test
WebKit Commit Bot
Comment 5
2017-03-22 13:30:45 PDT
Comment on
attachment 305114
[details]
patch Clearing flags on attachment: 305114 Committed
r214274
: <
http://trac.webkit.org/changeset/214274
>
WebKit Commit Bot
Comment 6
2017-03-22 13:30:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug