AX: WebKit is returning the wrong rangeForLine https://bugs.webkit.org/show_bug.cgi?id=169940

Reviewed by Chris Fleizach.

Source/WebCore:

The AXRangeForLine is being calculated using VisiblePostition, so
when we try to use the index we should validate it using VisiblePosition.

Changes are covered in the modified test.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::traverseToOffsetInRange):
(WebCore::AXObjectCache::characterOffsetForIndex):

LayoutTests:

* accessibility/mac/range-for-contenteditable-newline-expected.txt:
* accessibility/mac/range-for-contenteditable-newline.html:


Canonical link: https://commits.webkit.org/186902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214274 268f45cc-cd09-0410-ab3c-d52691b4dbfc